Fix alignment of submit button

--- a/services/stern/web/static/css/forums.css
+++ b/services/stern/web/static/css/forums.css
@@ -430,7 +430,7 @@
 
 .forum-search-form input[type="search"] {
     box-sizing: border-box;
-    width: 68%;
+    width: 65%;
     margin-left: 15px;
     padding: 5px;
     border-color: rgb(185, 197, 236);
